--- a/style.css
+++ b/style.css
@@ -2,8 +2,11 @@
   max-width: 980px;
   margin: 0 auto;
   margin-top: 30px;
-  box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
-    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+}
+.container {
+  display: flex;
+  justify-content: space-around;
+  padding-top: 10px;
 }
 .iconImage {
   width: 25px;
@@ -18,3 +21,11 @@
   display: block;
 }
 
+.checkList {
+  display: flex;
+  justify-content: space-around;
+}
+.clickCheckList {
+  text-decoration: none;
+  color: black;
+}
