--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+.backgroundColor {
+  height: 900px;
+  background-color: burlywood;
+  margin: 15px 300px 15px 300px;
+}
 .toDo {
   max-width: 980px;
   margin: 0 auto;
@@ -8,24 +13,62 @@
   justify-content: space-around;
   padding-top: 10px;
 }
-.iconImage {
-  width: 25px;
-}
-.image .hoverIcon {
-  display: none;
-}
-.image:hover .icon {
-  display: none;
-}
-.image:hover .hoverIcon {
-  display: block;
-}
 
 .checkList {
   display: flex;
   justify-content: space-around;
 }
 .clickCheckList {
+  display: none;
   text-decoration: none;
   color: black;
+}
+.contentList {
+  margin: 10px 0;
+  font-size: 18px;
+}
+.task-section {
+  margin-top: 10px;
+}
+
+.taskItem {
+  margin: 5px 0;
+  font-size: 18px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.checked {
+  text-decoration: line-through;
+  color: gray;
+}
+input[type="text"] {
+  margin-left: 8px;
+  padding: 4px;
+  font-size: 16px;
+}
+.deleteBtn {
+  margin-left: 10px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 18px;
+}
+.deleteBtn:hover {
+  color: red;
+}
+button {
+  background-color: #333;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  margin: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s;
+}
+
+button:hover {
+  background-color: #555;
 }
