--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-
-
+@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
 body {
   background-color: #7bdcff;
@@ -15,7 +13,6 @@ h1 {
   margin: 15px 300px 15px 300px;
   border-radius: 10px 10px;
   box-shadow: 3px 3px 3px #454444;
-
 }
 .toDo {
   max-width: 980px;
@@ -60,7 +57,7 @@ h1 {
 }
 .taskItem:hover {
   background-color: #f49efd;
-  transition: .3s;
+  transition: 0.3s;
 }
 .checked {
   text-decoration: line-through;
